# rtxdi

./: .gitignore  .gitmodules  CMakeLists.txt
Doc/: ResourceFlowDiagram.md
Doc/code/: 1.cpp  4.cpp  brdfRaytracing.cpp  gi_temporalResampling.cpp  shadeSecondarySurfaces.cpp
Libraries/Rtxdi/: CMakeLists.txt
Libraries/Rtxdi/Include/Rtxdi/GI/: BoilingFilter.hlsli  ReSTIRGI.h  ReSTIRGIParameters.h  TemporalResampling.hlsli
Libraries/Rtxdi/Include/Rtxdi/Utils/: ReservoirAddressing.hlsli
Libraries/Rtxdi/Source/: ImportanceSamplingContext.cpp  RISBufferSegmentAllocator.cpp  ReGIR.cpp  ReSTIRDI.cpp  ReSTIRGI.cpp  ReSTIRPT.cpp  RtxdiUtils.cpp
Samples/FullSample/Shaders/: CMakeLists.txt  CompositingPass.hlsl  GlassPass.hlsl  RaytracedGBuffer.hlsl
Samples/FullSample/Shaders/LightingPasses/: BrdfRayTracing.hlsl  ShadeSecondarySurfaces.hlsl  ShadingHelpers.hlsli
Samples/FullSample/Shaders/LightingPasses/RtxdiApplicationBridge/: RAB_LightSampling.hlsli  RAB_Surface.hlsli
Samples/FullSample/Shaders/SharedShaderInclude/SharedShaderInclude/: BRDFPTParameters.h  ShaderParameters.h
Samples/FullSample/Source/: CMakeLists.txt  UserInterface.cpp  UserInterface.h  main.cpp
Samples/FullSample/Source/App/: SceneRenderer.cpp  SceneRenderer.h
Samples/FullSample/Source/RenderPasses/: CompositingPass.cpp  PrepareLightsPass.cpp
Samples/FullSample/Source/RenderPasses/LightingPasses/: LightingPasses.cpp  LightingPasses.h
